Testing a color for form fields to make sure visible on mobile device.

--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -97,7 +97,7 @@ textarea {
     -webkit-appearance: none;
     -ms-appearance: none;
     appearance: none;
-    background: rgba(212, 212, 255, 0.035);
+    background: rgba(212, 212, 255, 0.068);
     border: none;
     border-radius: 0;
     color: inherit;
